# langchain-course

./: README.md  cli_entry.py  pyproject.toml
.github/workflows/: publish-langchain.yml  publish-npm.yml
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/docs/: providers-muapi.mdx
integrations/langchain/examples/: deep_agents_demo.py
integrations/langchain/muapi_langchain/: __init__.py  _client.py  _registry.py  callbacks.py  loader.py  tools.py
integrations/langchain/muapi_langchain/data/: models.json  skills.json
integrations/langchain/scripts/: refresh_registry.py
muapi/: dynamic_help.py  main.py  schema_introspect.py
muapi/commands/: mcp_server.py  run.py  workflow.py
npm/: package.json
