[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muapi-cli"
version = "0.2.5"
description = "Official CLI for muapi.ai — generative media at your fingertips"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "keyring>=24.0.0",
]

[project.scripts]
muapi = "muapi.main:app"

[project.optional-dependencies]
dev     = ["pytest", "pytest-asyncio", "respx"]
release = ["pyinstaller>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["muapi"]
