[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muapi-langchain"
version = "0.1.0"
description = "LangChain integration for muapi.ai — generative media tools, document loader, and Deep Agents recipe"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "muapi.ai" }]
keywords = ["langchain", "muapi", "generative", "image", "video", "audio", "deepagents"]

dependencies = [
    "muapi-cli>=0.2.5",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
community = ["langchain-community>=0.3.0"]
deepagents = ["deepagents>=0.0.5", "langgraph>=0.2.0", "langchain-openai>=0.2.0"]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://muapi.ai"
Documentation = "https://docs.muapi.ai"
Repository = "https://github.com/SamurAIGPT/muapi-cli"

[tool.hatch.build.targets.wheel]
packages = ["muapi_langchain"]

[tool.hatch.build.targets.wheel.force-include]
"muapi_langchain/data/models.json" = "muapi_langchain/data/models.json"
"muapi_langchain/data/skills.json" = "muapi_langchain/data/skills.json"
